--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,7 +37,7 @@ management:
     web:
       exposure:
         include: health, info, metrics, loggers, env
-#        base-path: /management  #actuator->management 로 경로 변경
+      base-path: /management  #actuator->management 로 경로 변경
   endpoint:
     health:
       show-details: always #개발 환경에서는 always, 운영에서는 when-authorized
