--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,15 +31,36 @@ logging:
 # 서버 설정
 server:
   port: 8080
+# actuator info 설정
+info:
+  app:
+    name: My Shopping Mall
+    description: E-commerce platform for fashion items
+    version: 1.0.0
+    encoding: UTF-8
+    java-version: 17
+
+  company:
+    name: MyCompany
+    email: support@mycompany.com
+    website: https://mycompany.com
+
+  team:
+    developer: Backend Team
+    manager: John Doe
+    contact: backend-team@mycompany.com
 
 management:
   endpoints:
     web:
       exposure:
-        include: health, info, metrics, loggers, env
+        include: health, info, metrics, loggers, env # *
       base-path: /management  #actuator->management 로 경로 변경
   endpoint:
     health:
       show-details: always #개발 환경에서는 always, 운영에서는 when-authorized
+  info:
+    env:
+      enabled: true
   server:
     port: 9090 # Actuator 전용 포트 (방화벽으로 막음)
